--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Password and Account Manager",
   "main": "entry.js",
   "scripts": {
-    "test": "electron entry.js"
+    "test": "electron entry.js",
+    "build": "babel ./gui/jsx -w -d ./gui"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,16 @@
   "bugs": {
     "url": "https://github.com/DAC098/Minerva/issues"
   },
-  "homepage": "https://github.com/DAC098/Minerva#readme"
+  "homepage": "https://github.com/DAC098/Minerva#readme",
+  "dependencies": {
+    "babel-core": "^6.10.4",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "chalk": "^1.1.3",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.5.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.10.1"
+  }
 }
