--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-    "plugins": ["transform-react-jsx"]
+    "presets": ["react"],
+    "plugins": [],
+    "only": [
+        "./build/*"
+    ]
 }
