--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "entry.js",
   "scripts": {
     "test": "electron entry.js",
-    "build": "babel ./gui/jsx -w -d ./gui"
+    "build": "babel ./build -w -d ./gui"
   },
   "repository": {
     "type": "git",
@@ -24,13 +24,18 @@
   "homepage": "https://github.com/DAC098/Minerva#readme",
   "dependencies": {
     "babel-core": "^6.10.4",
-    "babel-plugin-transform-react-jsx": "^6.8.0",
     "chalk": "^1.1.3",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-less": "^3.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-util": "^3.0.7",
+    "less": "^2.7.1",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-router": "^2.5.1"
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1"
+    "babel-cli": "^6.10.1",
+    "babel-preset-react": "^6.11.0"
   }
 }
