--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Password and Account Manager",
   "main": "entry.js",
   "scripts": {
-    "test": "electron entry.js",
-    "build": "babel ./build -w -d ./gui"
+    "start": "./node_modules/.bin/electron entry.js",
+    "build": "gulp build-react build-less",
+    "test": "./node_modules/.bin/mocha",
+    "b-watch": "gulp"
   },
   "repository": {
     "type": "git",
@@ -23,19 +25,23 @@
   },
   "homepage": "https://github.com/DAC098/Minerva#readme",
   "dependencies": {
-    "babel-core": "^6.10.4",
     "chalk": "^1.1.3",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-less": "^3.1.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-util": "^3.0.7",
+    "classnames": "^2.2.5",
+    "electron-prebuilt": "^1.2.7",
     "less": "^2.7.1",
+    "pump": "^1.0.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-preset-react": "^6.11.0"
+    "babel-core": "^6.10.4",
+    "babel-preset-react": "^6.11.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-less": "^3.1.0",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.8",
+    "mocha": "^2.5.3"
   }
 }
