--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-preset-react": "^6.11.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-less": "^3.1.0",
