--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "entry.js",
   "scripts": {
     "start": "./node_modules/.bin/electron entry.js",
-    "build": "gulp build-react build-less",
+    "build": "./node_modules/.bin/gulp build-react build-less",
     "test": "./node_modules/.bin/mocha",
     "start-mongod": "node ./lib/db/mongodEXE.js run_db",
     "start-mongo": "mongodb\\bin\\mongo.exe minerva",
-    "b-watch": "gulp"
+    "b-watch": "./node_modules/.bin/gulp"
   },
   "repository": {
     "type": "git",
